name:                Data-Angle
version:             0.9
synopsis:            Geometric angles
description:         A library for dealing with geometric angles (Degrees, Turns, Radians). For the sake of simplicity, the angles are represented in Radians
license:             BSD3
license-file:        LICENSE
author:              Adam Kecskes
maintainer:          kecskes.adam@outlook.com   
category:            Data, Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Angle
  build-depends:       base >=4.9 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
